--- a/stile.css
+++ b/stile.css
@@ -1,30 +1,45 @@
 .calc {
-    border:1px solid darkgrey;
+    border: 1px solid darkgrey;
 }
 
-tr, td {
-    border:1px;
+tr,
+td {
+    border: 1px;
 }
 
 .bottoneNum {
-    width:50px;
-    height:50px;
+    width: 50px;
+    height: 50px;
 }
 
 .bottoneUgu {
-    width:104px;
-    height:50px;
-    background-color:cornflowerblue;
+    width: 104px;
+    height: 50px;
+    background-color: cornflowerblue;
 }
 
 .bottoneOpe {
-    width:50px;
-    height:50px;
-    background-color:aqua;
+    width: 50px;
+    height: 50px;
+    background-color: aqua;
+}
+
+.bottoneReset {
+    width: 50px;
+    height: 50px;
+    background-color: orange;
+}
+
+.bottoneSpecial {
+    width: 50px;
+    height: 50px;
+    background-color: greenyellow;
 }
 
 .risultato {
-    width:210px;
-    height:50px;
-    background-color:aliceblue;
+    width: 210px;
+    height: 50px;
+    background-color: aliceblue;
+    text-align: right;
+    padding: 0px 5px;
 }
